--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=628
-posy=170
-sizex=544
-sizey=500
+posx=0
+posy=20
+sizex=1918
+sizey=1038
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/bella/Backgrounds;
+dirs=/home/bella/github/dotfiles/.Backgrounds;
