Using VSCodium now because its good and setup is perfect now.

--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -9,4 +9,4 @@ view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/bella/github/dotfiles/.Backgrounds;
+dirs=/home/bella/github/dotfiles/Backgrounds;
