--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/bella/github/dotfiles/.Backgrounds/retro.jpg
+file=/home/bella/github/dotfiles/Backgrounds/pink_space.jpg
 mode=4
 bgcolor=#000000
