--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -22,17 +22,17 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-     info "GPU Driver" gpu_driver  # Linux/macOS only
-     info "CPU Usage" cpu_usage
-     info "Disk" disk
-     info "Battery" battery
-     info "Font" font
-     info "Song" song
-     [[ "$player" ]] && prin "Music Player" "$player"
-     info "Local IP" local_ip
-     info "Public IP" public_ip
-     info "Users" users
-     info "Locale" locale  # This only works on glibc systems.
+    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
+    # info "Battery" battery
+    info "Font" font
+    # info "Song" song
+    # [[ "$player" ]] && prin "Music Player" "$player"
+    info "Local IP" local_ip
+    # info "Public IP" public_ip
+    # info "Users" users
+    info "Locale" locale  # This only works on glibc systems.
 
     info cols
 }
@@ -61,7 +61,7 @@ title_fqdn="off"
 # Example:
 # on:  '4.8.9-1-ARCH'
 # off: 'Linux 4.8.9-1-ARCH'
-kernel_shorthand="on"
+kernel_shorthand="off"
 
 
 # Distro
@@ -101,7 +101,7 @@ os_arch="on"
 # on:   '2 days, 10 hours, 3 mins'
 # tiny: '2d 10h 3m'
 # off:  '2 days, 10 hours, 3 minutes'
-uptime_shorthand="on"
+uptime_shorthand="tiny"
 
 
 # Memory
@@ -116,7 +116,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
 
 # Change memory output unit.
 #
@@ -159,7 +159,7 @@ package_managers="on"
 # Example:
 # on:  '/bin/bash'
 # off: 'bash'
-shell_path="off"
+shell_path="on"
 
 # Show $SHELL version
 #
@@ -195,7 +195,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -249,7 +249,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="C"
 
 
 # GPU
@@ -298,7 +298,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
+refresh_rate="on"
 
 
 # Gtk Theme / Icons / Font
@@ -347,7 +347,7 @@ gtk3="on"
 # Default: 'http://ident.me'
 # Values:  'url'
 # Flag:    --ip_host
-public_ip_host="http://ident.me"
+public_ip_host="ip.me"
 
 # Public IP timeout.
 #
@@ -387,7 +387,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/')
+disk_show=('/' "${HOME}/Toshiba")
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -526,7 +526,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(5 14 2 4 15)
 
 
 # Text Options
@@ -694,7 +694,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="kitty"
 
 # Image Source
 #
@@ -708,7 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="${HOME}/.config/neofetch/"
 
 
 # Ascii Options
