--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -29,7 +29,7 @@ print_info() {
     info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
-    info "Local IP" local_ip
+    # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     info "Locale" locale  # This only works on glibc systems.
@@ -387,7 +387,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/' "${HOME}/Toshiba")
+disk_show=('/' "${HOME}/Work" "${HOME}/Work/Toshiba")
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -694,7 +694,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="kitty"
+image_backend="ascii"
 
 # Image Source
 #
@@ -708,7 +708,7 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="${HOME}/.config/neofetch/"
+image_source="auto"
 
 
 # Ascii Options
