--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -13,11 +13,8 @@ print_info() {
     info "Resolution" resolution
     info "DE" de
     info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+    info "Editor" EDITOR
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
@@ -25,14 +22,13 @@ print_info() {
     info "GPU Driver" gpu_driver  # Linux/macOS only
     info "CPU Usage" cpu_usage
     info "Disk" disk
-    # info "Battery" battery
-    info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
+    info "Battery" battery
     info "Locale" locale  # This only works on glibc systems.
+    info "Theme" theme
+    info "Icons" icons
+    info "Font" font
+
+    info "Local IP" local_ip
 
     info cols
 }
