--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,3 +21,5 @@ map ctrl+left resize_window narrower
 map ctrl+right resize_window wider
 map ctrl+up resize_window taller
 map ctrl+down resize_window shorter
+
+map ctrl+shift+enter new_window_with_cwd
