--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -36,12 +36,8 @@ rotate_up = <ctrl> <super> KEY_UP
 a0 = gentoo-pipewire-launcher
 autostart_wf_shell = true
 background = wf-background
-dock = wf-dock
-gamma = wlsunset
 idle = swayidle before-sleep swaylock
 notifications = mako
-outputs = kanshi
-panel = wf-panel
 portal = /usr/libexec/xdg-desktop-portal
 
 [background-view]
@@ -73,11 +69,11 @@ toggle = none
 
 [command]
 binding_launcher = <super> <shift> KEY_ENTER
-binding_lock = <super> <shift> KEY_ESC
+binding_lock = KEY_PAUSE
 binding_logout = <super> KEY_ESC
 binding_mute = KEY_MUTE
-binding_screenshot = KEY_PRINT
-binding_screenshot_interactive = <shift> KEY_PRINT
+binding_screenshot = KEY_SYSRQ
+binding_screenshot_interactive = <shift> KEY_SYSRQ
 binding_terminal = <super> KEY_ENTER
 command_launcher = rofi -show drun
 command_light_down = light -U 5
@@ -85,8 +81,8 @@ command_light_up = light -A 5
 command_lock = swaylock
 command_logout = wlogout
 command_mute = amixer set Master toggle
-command_screenshot = grim $(date '+%F_%T').webp
-command_screenshot_interactive = slurp | grim -g - $(date '+%F_%T').webp
+command_screenshot = grim ~/Screenshots/$(date '+%F_%T').png
+command_screenshot_interactive = slurp | grim -g - ~/Screenshots/$(date '+%F_%T').png
 command_terminal = kitty
 command_volume_down = amixer set Master 5%-
 command_volume_up = amixer set Master 5%+
@@ -102,10 +98,10 @@ focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 focus_buttons_passthrough = true
 max_render_time = -1
-plugins = alpha animate autostart command cube decoration expo fast-switcher fisheye grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions wobbly wrot zoom alpha blur annotate
+plugins = alpha animate autostart command cube decoration expo fast-switcher fisheye idle invert move oswitch place resize switcher vswitch window-rules wm-actions wobbly wrot zoom blur annotate autorotate-iio simple-tile grid preserve-output
 preferred_decoration_mode = client
-vheight = 3
-vwidth = 3
+vheight = 2
+vwidth = 2
 xwayland = true
 
 [crosshair]
@@ -315,7 +311,7 @@ toggle = <alt> <super> KEY_S
 button_move = <super> BTN_LEFT
 button_resize = <super> BTN_RIGHT
 inner_gap_size = 8
-keep_fullscreen_on_adjacent = true
+keep_fullscreen_on_adjacent = false
 key_focus_above = <super> KEY_K
 key_focus_below = <super> KEY_J
 key_focus_left = <super> KEY_H
@@ -369,13 +365,13 @@ dec_x_binding = <ctrl> <super> KEY_LEFT
 dec_y_binding = <ctrl> <super> KEY_UP
 inc_x_binding = <ctrl> <super> KEY_RIGHT
 inc_y_binding = <ctrl> <super> KEY_DOWN
-modifier = <ctrl> <super> 
+modifier = <ctrl> <super>
 nearest_filtering = false
 preserve_aspect = true
 zoom_step = 0.100000
 
 [wm-actions]
-minimize = none
+minimize = <super> KEY_N
 send_to_back = none
 toggle_always_on_top = none
 toggle_fullscreen = <super> KEY_F
