--- a/.config/wf-shell.ini
+++ b/.config/wf-shell.ini
@@ -5,14 +5,14 @@ preserve_aspect = false
 randomize = false
 
 [dock]
-autohide_duration = 300
+autohide_duration = 0
 css_path = 
 position = bottom
 
 [panel]
-autohide = false
-autohide_duration = 300
-background_color = gtk_headerbar
+autohide = true
+autohide_duration = -1
+background_color = 
 battery_font = default
 battery_icon_invert = true
 battery_icon_size = 24
@@ -23,10 +23,10 @@ css_path =
 launchers_size = 42
 launchers_spacing = 4
 layer = top
-menu_fuzzy_search = true
+menu_fuzzy_search = false
 menu_icon = 
 menu_logout_command = wayland-logout
-minimal_height = 24
+minimal_height = -1
 network_icon_invert_color = false
 network_icon_size = 32
 network_status = 2
@@ -34,7 +34,7 @@ network_status_font = default
 network_status_use_color = false
 position = top
 volume_display_timeout = 2.500000
-widgets_center = clock
-widgets_left = spacing4 menu spacing18 launchers
-widgets_right = volume
+widgets_center = 
+widgets_left = 
+widgets_right = 
 
