--- a/.awesome_xinitrc
+++ b/.awesome_xinitrc
@@ -1,4 +1,6 @@
 #!/bin/sh
 
+[[ -f ~/.Xresources ]] && xrdb -merge -I$HOME ~/.Xresources
+
 gentoo-pipewire-launcher &
 exec dbus-launch --sh-syntax --exit-with-session awesome
