--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -383,7 +383,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/' "${HOME}/Toshiba")
+disk_show=('/')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
