--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,10 @@
-font_family         Bitstream Vera Sans Mono Nerd Font Complete Mono
+font_family         Fira Code
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
 font_size 16
-
-cursor #bf1ed6
+# cursor #bf1ed6
 cursor_shape underline
 
 enable_audio_bell no
@@ -23,3 +22,9 @@ map ctrl+up resize_window taller
 map ctrl+down resize_window shorter
 
 map ctrl+shift+enter new_window_with_cwd
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Macchiato
+include current-theme.conf
+# END_KITTY_THEME
