Fixed music stuff :3

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -159,7 +159,8 @@ bind = $mainMod, M, submap, music
 submap = music
 
 # sets repeatable binds for starting/controlling music with mpvpaper
-binde = , XF86AudioPlay, exec, $HOME/.config/hypr/scripts/music/play.sh
+binde = , S, exec, $HOME/.config/hypr/scripts/music/start.sh
+binde = , XF86AudioPlay, exec, $HOME/.config/hypr/scripts/music/pause.sh
 binde = , XF86AudioPrev, exec, $HOME/.config/hypr/scripts/music/previous.sh
 binde = , XF86AudioNext, exec, $HOME/.config/hypr/scripts/music/next.sh
 binde = , XF86AudioMute, exec, $HOME/.config/hypr/scripts/music/mute.sh
