--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -143,3 +143,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Screenshotting
+bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
+bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
