--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -175,3 +175,8 @@ bind = , escape, submap, reset
 submap = reset
 
 # keybinds further down will be global
+
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
