--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & gentoo-pipewire-launcher &
+exec-once = waybar & gentoo-pipewire-launcher & exec $HOME/.config/hypr/scripts/opening.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
