Added a submap for music

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -147,3 +147,30 @@ bindm = $mainMod, mouse:273, resizewindow
 # Screenshotting
 bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
 bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
+
+
+
+# Music
+
+# will switch to a submap called music
+bind = $mainMod, M, submap, music
+
+# will start a submap called "music"
+submap = music
+
+# sets repeatable binds for starting/controlling music with mpvpaper
+binde = , XF86AudioPlay, exec, $HOME/.config/hypr/scripts/music/play.sh
+binde = , XF86AudioPrev, exec, $HOME/.config/hypr/scripts/music/previous.sh
+binde = , XF86AudioNext, exec, $HOME/.config/hypr/scripts/music/next.sh
+binde = , XF86AudioMute, exec, $HOME/.config/hypr/scripts/music/mute.sh
+binde = , XF86AudioLowerVolume, exec, $HOME/.config/hypr/scripts/music/lower.sh
+binde = , XF86AudioRaiseVolume, exec, $HOME/.config/hypr/scripts/music/raise.sh
+binde = , Q, exec, $HOME/.config/hypr/scripts/music/stop.sh
+
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+
+# will reset the submap, meaning end the current one and return to the global one
+submap = reset
+
+# keybinds further down will be global
