--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & gentoo-pipewire-launcher &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -46,10 +46,6 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = true
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
 
     drop_shadow = true
     shadow_range = 4
@@ -100,11 +96,11 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, Return, exec, kitty
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, kitty lf
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
