Now also using hyprpaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,auto
+monitor= , highres, auto, auto
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
@@ -16,7 +16,9 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & gentoo-pipewire-launcher & exec $HOME/.config/hypr/scripts/opening.sh
+exec-once = waybar &
+exec-once = gentoo-pipewire-launcher &
+exec-once = exec $HOME/.config/hypr/scripts/start.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
