--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once = dbus-update-activation-environment
 exec-once = waybar &
 exec-once = gentoo-pipewire-launcher &
 exec-once = exec $HOME/.config/hypr/scripts/start.sh
