--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -36,7 +36,7 @@ $time\
 show_always = true
 style_user = "bg:#9A348E"
 style_root = "bg:#9A348E"
-format = '[$user  🏳️‍⚧️🏳️‍🌈]($style)'
+format = '[$user]($style)'
 disabled = false
 
 # An alternative to the username module which displays a symbol that
