--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -55,7 +55,7 @@
     },
 
     "clock#1": {
-	"format": "{:%a}",
+	"format": "{:%A}",
 	"tooltip": false
     },
     
@@ -65,7 +65,7 @@
     },
 	
     "clock#3": {
-	"format": "{:%d-%m}",
+	"format": "{:%D}",
 	"tooltip": false
     },
     
