Using Vesktop now

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ bind = $mainMod, R, exec, wofi -I -G --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t # swaylock
-bind = $mainMod, D, exec, killall Discord # just incase :3
+bind = $mainMod, D, exec, killall vesktop # just incase :3
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
