--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,10 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor= , highres, auto, auto
+# HDMI-A-1 is main monitor
+# HDMI-A-2 is second monitor, left to main
+monitor = HDMI-A-1, 1920x1080@144, 0x0, 1
+monitor = HDMI-A-2, 1080x1920@60, -1080x0, 1, transform, 1
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
@@ -26,7 +29,8 @@ exec-once = exec $HOME/.config/hypr/scripts/start.sh
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = gb
+    kb_layout = gb,pl
+    kb_options = grp:alt_shift_toggle
 
     follow_mouse = 1
 
@@ -80,12 +84,6 @@ dwindle {
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
 }
 
 # Example windowrule v1
@@ -178,8 +176,3 @@ bind = , escape, submap, reset
 submap = reset
 
 # keybinds further down will be global
-
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
