woops scripts were not in repo also now i setup silli macros that only work in xwayland apps

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -163,3 +163,10 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
+
+
+# macros
+bind = SUPERSHIFT, h, exec, $HOME/.config/hypr/scripts/macros/heart.sh
+bind = SUPERSHIFT, s, exec, $HOME/.config/hypr/scripts/macros/skull.sh
+bind = SUPERSHIFT, t, exec, $HOME/.config/hypr/scripts/macros/trol.sh
