Updated since I got a second monitor now >:3

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
 preload = /home/bella/Pictures/Wallpapers/reimu in the snow.png
+preload = /home/bella/Pictures/Wallpapers/sajclops.png
 
 wallpaper = HDMI-A-1, /home/bella/Pictures/Wallpapers/reimu in the snow.png
+wallpaper = HDMI-A-2, /home/bella/Pictures/Wallpapers/sajclops.png
