--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,19 +22,23 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 exec-once = dbus-update-activation-environment
 exec-once = waybar &
 exec-once = gentoo-pipewire-launcher &
-exec-once = exec $HOME/.config/hypr/scripts/start.sh
+exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t' &
+exec-once = hyprpaper
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+env = HYPRCURSOR_THEME, Nordzy-cursors-white-HYPR
+env = HYPRCURSOR_SIZE, 24
+
+env = XCURSOR_THEME, Adwaita
+env = XCURSOR_SIZE, 24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = gb,pl
-    kb_options = grp:alt_shift_toggle
+    kb_variant = pl,
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 1.0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -105,7 +109,8 @@ bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, Escape, exec, swaylock # swaylock
+bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t # swaylock
+bind = $mainMod, D, exec, killall Discord # just incase :3
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -148,31 +153,3 @@ bindm = $mainMod, mouse:273, resizewindow
 # Screenshotting
 bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
 bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
-
-
-
-# Music
-
-# will switch to a submap called music
-bind = $mainMod, M, submap, music
-
-# will start a submap called "music"
-submap = music
-
-# sets repeatable binds for starting/controlling music with mpvpaper
-binde = , S, exec, $HOME/.config/hypr/scripts/music/start.sh
-binde = , XF86AudioPlay, exec, $HOME/.config/hypr/scripts/music/pause.sh
-binde = , XF86AudioPrev, exec, $HOME/.config/hypr/scripts/music/previous.sh
-binde = , XF86AudioNext, exec, $HOME/.config/hypr/scripts/music/next.sh
-binde = , XF86AudioMute, exec, $HOME/.config/hypr/scripts/music/mute.sh
-binde = , XF86AudioLowerVolume, exec, $HOME/.config/hypr/scripts/music/lower.sh
-binde = , XF86AudioRaiseVolume, exec, $HOME/.config/hypr/scripts/music/raise.sh
-binde = , Q, exec, $HOME/.config/hypr/scripts/music/stop.sh
-
-# use reset to go back to the global submap
-bind = , escape, submap, reset
-
-# will reset the submap, meaning end the current one and return to the global one
-submap = reset
-
-# keybinds further down will be global
