wofi improved, xwaylandvideobridge in use now

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,11 +19,12 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dbus-update-activation-environment
-exec-once = waybar &
-exec-once = gentoo-pipewire-launcher &
-exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t' &
 exec-once = hyprpaper
+exec-once = waybar &
+exec-once = xwaylandvideobridge &
+exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t' &
+exec-once = dbus-update-activation-environment
+exec-once = gentoo-pipewire-launcher &
 
 env = HYPRCURSOR_THEME, Nordzy-cursors-white-HYPR
 env = HYPRCURSOR_SIZE, 24
@@ -106,7 +107,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, kitty lf
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, wofi -I -G --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t # swaylock
@@ -153,3 +154,12 @@ bindm = $mainMod, mouse:273, resizewindow
 # Screenshotting
 bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
 bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
+
+
+
+# XWayland screensharing
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
