--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = inherit
 }
 
 # Example windowrule v1
@@ -167,6 +167,8 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
 
 # macros
+bind = SUPERSHIFT, b, exec, $HOME/.config/hypr/scripts/macros/bob.sh
+bind = SUPERSHIFT, c, exec, $HOME/.config/hypr/scripts/macros/cat.sh
 bind = SUPERSHIFT, h, exec, $HOME/.config/hypr/scripts/macros/heart.sh
 bind = SUPERSHIFT, s, exec, $HOME/.config/hypr/scripts/macros/skull.sh
 bind = SUPERSHIFT, t, exec, $HOME/.config/hypr/scripts/macros/trol.sh
