add fullscreen keybind and change floating keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -106,7 +106,8 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, kitty lf
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, T, togglefloating,
 bind = $mainMod, R, exec, wofi -I -G --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
