Added a way to screenshot a chosen monitor :3

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -154,7 +154,8 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Screenshotting
 bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
-bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
+bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/monitor.sh
+bind = SUPERSHIFT, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
 
 
 
