Now using hyprshot (and grim for full screenshot atm) for screenshotting

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,6 +113,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t # swaylock
 bind = $mainMod, D, exec, killall vesktop # just incase :3
+bind = $mainMod, S, exec, $HOME/important/sync.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -152,10 +153,23 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+
+
 # Screenshotting
-bind = , print, exec, $HOME/.config/hypr/scripts/screenshots/all.sh
-bind = $mainMod, print, exec, $HOME/.config/hypr/scripts/screenshots/monitor.sh
-bind = SUPERSHIFT, print, exec, $HOME/.config/hypr/scripts/screenshots/area.sh
+
+env = GRIM_DEFAULT_DIR, $HOME/Pictures/Screenshots
+
+# Screenshot everything
+bind = , print, exec, grim 
+
+# Screenshot Monitor
+bind = $mainMod, print, exec, hyprshot --clipboard-only -m output
+
+# Screenshot Window
+bind = SUPERCTRL, print, exec, hyprshot --clipboard-only -m window
+
+# Screenshot Area
+bind = SUPERSHIFT, print, exec, hyprshot --clipboard-only -m region
 
 
 
@@ -165,12 +179,3 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-
-
-
-# macros
-bind = SUPERSHIFT, b, exec, $HOME/.config/hypr/scripts/macros/bob.sh
-bind = SUPERSHIFT, c, exec, $HOME/.config/hypr/scripts/macros/cat.sh
-bind = SUPERSHIFT, h, exec, $HOME/.config/hypr/scripts/macros/heart.sh
-bind = SUPERSHIFT, s, exec, $HOME/.config/hypr/scripts/macros/skull.sh
-bind = SUPERSHIFT, t, exec, $HOME/.config/hypr/scripts/macros/trol.sh
