added sound control

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,10 +21,15 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # Execute your favorite apps at launch
 exec-once = hyprpaper
 exec-once = waybar &
-exec-once = xwaylandvideobridge &
 exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t' &
-exec-once = dbus-update-activation-environment
 exec-once = gentoo-pipewire-launcher &
+exec-once = xwaylandvideobridge &
+
+# portal stuff
+env = XDG_CURRENT_DESKTOP, Hyprland
+env = XDG_SESSION_TYPE, wayland
+env = XDG_SESSION_DESKTOP, Hyprland
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 env = HYPRCURSOR_THEME, Nordzy-cursors-white-HYPR
 env = HYPRCURSOR_SIZE, 24
@@ -172,6 +177,12 @@ bind = SUPERCTRL, print, exec, hyprshot --clipboard-only -m window
 bind = SUPERSHIFT, print, exec, hyprshot --clipboard-only -m region
 
 
+
+# sound
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # XWayland screensharing
 windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
