update hyprcursor theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-env = HYPRCURSOR_THEME, Nordzy-cursors-white-HYPR
+env = HYPRCURSOR_THEME, rose-pine-hyprcursor
 env = HYPRCURSOR_SIZE, 24
 
 env = XCURSOR_THEME, Adwaita
