Reimu in the snow

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # Execute your favorite apps at launch
 exec-once = hyprpaper
 exec-once = waybar &
-exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t' &
+exec-once = swayidle -w timeout 10 'if pgrep swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -i /home/bella/Pictures/Wallpapers/reimu_in_the_snow.png' &
 exec-once = gentoo-pipewire-launcher &
 exec-once = xwaylandvideobridge &
 
@@ -116,9 +116,8 @@ bind = $mainMod, T, togglefloating,
 bind = $mainMod, R, exec, wofi -I -G --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/sajclops.png -t # swaylock
+bind = $mainMod, Escape, exec, swaylock -f -i /home/bella/Pictures/Wallpapers/reimu_in_the_snow.png # swaylock
 bind = $mainMod, D, exec, killall vesktop # just incase :3
-bind = $mainMod, S, exec, $HOME/important/sync.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
