Now using fuzzel :3

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,7 +113,7 @@ bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, kitty lf
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, T, togglefloating,
-bind = $mainMod, R, exec, wofi -I -G --show drun
+bind = $mainMod, R, exec, fuzzel -T kitty
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Escape, exec, hyprlock # hyprlock
