--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family         Fira Code
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
+font_family      Iosevka
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 16
 # cursor #bf1ed6
