New setup after getting a Radeon RX 7600

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,7 +3,7 @@ source = $HOME/.config/hypr/macchiato.conf
 $accent = $mauve
 $accentAlpha = $mauveAlpha
 #$font = JetBrainsMono Nerd Font
-$font = Fira Code
+$font = Iosevka
 
 # GENERAL
 general {
