--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 preload = /home/bella/Pictures/Wallpapers/megu/motivational.png
 preload = /home/bella/Pictures/Wallpapers/megu/motivational_tall.png
 
-wallpaper = HDMI-A-1, /home/bella/Pictures/Wallpapers/megu/motivational.png
-wallpaper = HDMI-A-2, /home/bella/Pictures/Wallpapers/megu/motivational_tall.png
+wallpaper = DP-3, /home/bella/Pictures/Wallpapers/megu/motivational.png
+wallpaper = HDMI-A-3, /home/bella/Pictures/Wallpapers/megu/motivational_tall.png
