--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,10 +8,9 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# HDMI-A-1 is main monitor
-# HDMI-A-2 is second monitor, left to main
 monitor = DP-3, 1920x1080@144, 0x0, 1
 monitor = HDMI-A-3, 1920x1080@60, -1080x-840, 1, transform, 1
+monitor = HDMI-A-2, 1920x1080@60, -1080x-840, 1, transform, 1 # exists when other 2 don't
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
@@ -19,10 +18,10 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once = gentoo-pipewire-launcher restart &
 exec-once = hyprpaper
 exec-once = waybar &
 exec-once = swayidle -w timeout 10 'if pgrep hyprlock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on' before-sleep 'hyprlock' &
-exec-once = gentoo-pipewire-launcher &
 exec-once = xwaylandvideobridge &
 
 # portal stuff
