--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,3 +3,4 @@ preload = /home/bella/Pictures/Wallpapers/megu/motivational_tall.png
 
 wallpaper = DP-3, /home/bella/Pictures/Wallpapers/megu/motivational.png
 wallpaper = HDMI-A-3, /home/bella/Pictures/Wallpapers/megu/motivational_tall.png
+wallpaper = HDMI-A-2, /home/bella/Pictures/Wallpapers/megu/motivational_tall.png # exists when other 2 don't
